--- a/app/views/psd-revised-flow/case-status-2/inc_businesses-pgs-breadcrumbs-all.html
+++ b/app/views/psd-revised-flow/case-status-2/inc_businesses-pgs-breadcrumbs-all.html
@@ -7,7 +7,7 @@
       <a class="govuk-breadcrumbs__link" href="new-businesses-example_your_businesses-new">Businesses</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="new-businesses-example_all_businesses-new">All businesses &ndash; search</a>
+      <a class="govuk-breadcrumbs__link" href="new-businesses-example_all_businesses-new">All businesses &ndash; Search</a>
     </li>
   </ol>
 </nav>
