--- a/app/views/psd-revised-flow/case-status-2/inc_cases-pgs-breadcrumbs-all.html
+++ b/app/views/psd-revised-flow/case-status-2/inc_cases-pgs-breadcrumbs-all.html
@@ -7,7 +7,7 @@
       <a class="govuk-breadcrumbs__link" href="new-cases-example_your_cases-new.html">Cases</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="new-cases-example_all_cases-new">All cases &ndash; search</a>
+      <a class="govuk-breadcrumbs__link" href="new-cases-example_all_cases-new">All cases &ndash; Search</a>
     </li>
   </ol>
 </nav>
