--- a/app/views/psd-revised-flow/case-status-2/new-products-example_all_products-new-edit.html
+++ b/app/views/psd-revised-flow/case-status-2/new-products-example_all_products-new-edit.html
@@ -285,7 +285,7 @@ All products - Search
           </div>
 
           <div class="govuk-button-group govuk-!-margin-top-6">
-            <button class="govuk-button">
+            <button type="search" class="govuk-button">
               Search
             </button>
 
