--- a/app/views/psd-revised-flow/case-status-2/new-businesses-example_all_businesses-new-edit.html
+++ b/app/views/psd-revised-flow/case-status-2/new-businesses-example_all_businesses-new-edit.html
@@ -75,7 +75,7 @@ All businesses - search
             <label class="govuk-label--s" for="businesses-search">Search</label>
 
             <div class="govuk-input__wrapper opss-search__wrapper">
-              <input class="govuk-input govuk-!-width-three-quarters" spellcheck="false" type="search" name="businesses-search" id="businesses-search" aria-describedby="search-hint">
+              <input class="govuk-input govuk-!-width-three-quarters" spellcheck="false" type="search" name="businesses-search" id="businesses-search" aria-describedby="search-hint" value="Richards and Son Ltd">
               <button class="govuk-button govuk-!-margin-bottom-0">
                 <span class="govuk-visually-hidden">Submit search</span>
               </button>
@@ -94,13 +94,13 @@ All businesses - search
 
               <div class="govuk-radios govuk-radios--inline govuk-radios--small govuk-!-margin-top-3">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input opss-radios__input-default" id="ordering" name="ordering" type="radio" value="ordering-newly" checked>
+                  <input class="govuk-radios__input opss-radios__input-default" id="ordering" name="ordering" type="radio" value="ordering-newly">
                   <label class="govuk-label govuk-radios__label" for="ordering">
                     Newly Added
                   </label>
                 </div>
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="ordering-2" name="ordering" type="radio" value="ordering-a-z">
+                  <input class="govuk-radios__input" id="ordering-2" name="ordering" type="radio" value="ordering-a-z" checked>
                   <label class="govuk-label govuk-radios__label" for="ordering-2">
                     Name A&ndash;Z
                   </label>
