--- a/app/views/psd-revised-flow/case-status-2/new-cases-example_all_cases-new.html
+++ b/app/views/psd-revised-flow/case-status-2/new-cases-example_all_cases-new.html
@@ -527,7 +527,7 @@ All cases - Search
                     </div>
 
                     <div class="govuk-button-group govuk-!-margin-top-6">
-                        <button class="govuk-button">
+                        <button type="search" class="govuk-button">
                             Search
                         </button>
 
