--- a/app/views/psd-revised-flow/case-status-2/new-products-example_all_products-new.html
+++ b/app/views/psd-revised-flow/case-status-2/new-products-example_all_products-new.html
@@ -268,13 +268,13 @@ All products - Search
                     <div class="govuk-radios__item">
                       <input class="govuk-radios__input" id="ordering-2" name="ordering" type="radio" value="order-a-z">
                       <label class="govuk-label govuk-radios__label" for="ordering-2">
-                        Name A-Z
+                        Name A&ndash;Z
                       </label>
                     </div>
                     <div class="govuk-radios__item">
                       <input class="govuk-radios__input" id="ordering-3" name="ordering" type="radio" value="order-z-a">
                       <label class="govuk-label govuk-radios__label" for="ordering-3">
-                        Name Z-A
+                        Name Z&ndash;A
                       </label>
                     </div>
 
@@ -285,7 +285,7 @@ All products - Search
           </div>
 
           <div class="govuk-button-group govuk-!-margin-top-6">
-            <button class="govuk-button">
+            <button type="search" class="govuk-button">
               Search
             </button>
 
