--- a/app/views/psd-revised-flow/case-status/inc_products-pgs-breadcrumbs-all.html
+++ b/app/views/psd-revised-flow/case-status/inc_products-pgs-breadcrumbs-all.html
@@ -7,7 +7,7 @@
       <a class="govuk-breadcrumbs__link" href="new-products-example_your_products-new">Products</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="new-products-example_all_products-new">All products &ndash; search</a>
+      <a class="govuk-breadcrumbs__link" href="new-products-example_all_products-new">All products &ndash; Search</a>
     </li>
   </ol>
 </nav>
