changed form urls

--- a/app/views/psd-revised-flow/consignment-ref/edit-customs-codes.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-customs-codes.html
@@ -32,7 +32,7 @@ href: "customs-codes-04"
 
 
 
-        <form action="case-trading-stds-landing-updated" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
             <div class="govuk-form-group">
                 <label class="govuk-label" for="batch-numbers">
@@ -40,7 +40,7 @@ href: "customs-codes-04"
                 </label>
 
                 <div id="batch-numbers-hint" class="govuk-hint">
-                    <span class="govuk-!-display-block  govuk-!-font-size-16">
+                    <span class="govuk-!-display-block govuk-!-font-size-16">
                         For example, a <abbr>CN</abbr> code (8 digits) or a TARIC code (10 digits).
                     </span>
                 </div>
