--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -17,7 +17,7 @@ body > .govuk-width-container > .govuk-main-wrapper > .govuk-back-link {
 }
 
 @include govuk-media-query($from: desktop) {
-  // fix for psd while it is unable to place back links/breadcrumbs outside and before the main.govuk-main-wrapper element
+  // fix for psd while it is unable to place back links/breadcrumbs directly outside and before the main.govuk-main-wrapper element
   body > .govuk-width-container > .govuk-main-wrapper > .govuk-back-link {
     margin-top: - govuk-spacing(8);
     margin-bottom: govuk-spacing(1);
@@ -30,11 +30,9 @@ body > .govuk-width-container > .govuk-main-wrapper > .govuk-back-link {
     margin-bottom: (govuk-spacing(6) + 3);
   }
 
-  .govuk-width-container > .govuk-back-link + main.govuk-main-wrapper {
-    padding-top: govuk-spacing(0);
-  }
-
-  .govuk-width-container > .govuk-breadcrumbs + main.govuk-main-wrapper {
+  .govuk-width-container > .govuk-back-link + main.govuk-main-wrapper,
+  .govuk-width-container > .govuk-breadcrumbs + main.govuk-main-wrapper,
+  .govuk-width-container > .govuk-grid-row + main.govuk-main-wrapper {
     padding-top: govuk-spacing(5);
   }
 }
