small updates to attr in forms

--- a/app/views/psd-revised-flow/case-status-2/all_products-new-results.html
+++ b/app/views/psd-revised-flow/case-status-2/all_products-new-results.html
@@ -65,7 +65,7 @@ All products - search results
   </section>
 
   <!-- ********* results section starts ************ -->
-  <section class="govuk-grid-column-three-quarters" id="page-content" role="region" aria-label="Search and results">
+  <section class="govuk-grid-column-three-quarters" id="page-content" aria-label="Search and results">
 
     <div class="govuk-grid-row">
 
@@ -93,7 +93,7 @@ All products - search results
     </div>
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full" role="region" aria-label="products">
+      <div class="govuk-grid-column-full" aria-label="products">
 
         <table class="govuk-table opss-table-items opss-table-items--sm">
           <caption class="govuk-visually-hidden">
