--- a/app/views/psd-revised-flow/case-status-2/content-case-page.html
+++ b/app/views/psd-revised-flow/case-status-2/content-case-page.html
@@ -30,7 +30,7 @@
         {% include "psd-revised-flow/case-status-2/inc_cases_left_nav_1.html" %}
     </nav>
 
-    <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
+    <section id="page-content" class="govuk-grid-column-three-quarters">
 
         {% include "psd-revised-flow/inc_top_nav_2.html" %}
 
