--- a/app/views/psd-revised-flow/case-status-2/content-product-page.html
+++ b/app/views/psd-revised-flow/case-status-2/content-product-page.html
@@ -54,7 +54,7 @@
         </ul>
     </nav>
 
-    <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
+    <section id="page-content" class="govuk-grid-column-three-quarters">
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The product record</h2>
 
