--- a/app/views/psd-revised-flow/case-status-2/new-cases-example_your_cases-new.html
+++ b/app/views/psd-revised-flow/case-status-2/new-cases-example_your_cases-new.html
@@ -103,7 +103,7 @@ Your cases
         </div>
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full" role="region" aria-label="Cases">
+            <div class="govuk-grid-column-full" aria-label="Cases">
 
                 <table class="govuk-table opss-table-items opss-table-items--sm">
                     <caption class="govuk-visually-hidden">
