--- a/app/views/psd-revised-flow/case-status-2/new-products-example_your_products-new.html
+++ b/app/views/psd-revised-flow/case-status-2/new-products-example_your_products-new.html
@@ -97,7 +97,7 @@ Your products
     </div>
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full" role="region" aria-label="Products">
+      <div class="govuk-grid-column-full" aria-label="Products">
 
         <table class="govuk-table opss-table-items opss-table-items--sm">
           <caption class="govuk-visually-hidden">
