--- a/app/views/psd-revised-flow/case-status-2/all_businesses-new-results.html
+++ b/app/views/psd-revised-flow/case-status-2/all_businesses-new-results.html
@@ -62,7 +62,7 @@ All businesses - search results
   </section>
 
   <!-- ********* results section starts ************ -->
-  <section class="govuk-grid-column-three-quarters" id="page-content" role="region" aria-label="Search and results">
+  <section class="govuk-grid-column-three-quarters" id="page-content" aria-label="Search and results">
 
     <div class="govuk-grid-row">
 
@@ -90,7 +90,7 @@ All businesses - search results
     </div>
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full" role="region" aria-label="products">
+      <div class="govuk-grid-column-full" aria-label="products">
 
         <table class="govuk-table opss-table-items opss-table-items--first-col-33 opss-table-items--sm opss-table--borders">
           <caption class="govuk-table__caption govuk-visually-hidden">Businesses: a simple data table.</caption>
