--- a/app/views/psd-revised-flow/case-status-2/all_cases-new-results.html
+++ b/app/views/psd-revised-flow/case-status-2/all_cases-new-results.html
@@ -68,7 +68,7 @@ All cases - search results
   </section>
 
   <!-- ********* results section starts ************ -->
-  <section class="govuk-grid-column-three-quarters" id="page-content" role="region" aria-label="Search and results">
+  <section class="govuk-grid-column-three-quarters" id="page-content" aria-label="Search and results">
 
     <div class="govuk-grid-row">
 
@@ -96,7 +96,7 @@ All cases - search results
     </div>
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full" role="region" aria-label="Cases">
+      <div class="govuk-grid-column-full" aria-label="Cases">
 
         <table class="govuk-table opss-table-items opss-table-items--sm">
           <caption class="govuk-visually-hidden">
