--- a/app/views/psd-revised-flow/case-status-2/new-businesses-example_all_businesses-new-edit.html
+++ b/app/views/psd-revised-flow/case-status-2/new-businesses-example_all_businesses-new-edit.html
@@ -64,7 +64,7 @@ All businesses - search
   </section>
 
   <!-- ********* search section starts ************ -->
-  <section id="page-content" class="govuk-grid-column-three-quarters" role="region" aria-label="Search and results">
+  <section id="page-content" class="govuk-grid-column-three-quarters" aria-label="Search and results">
 
     <form action="all_businesses-new-results.html" method="get" role="search" accept-charset="UTF-8" novalidate>
 
@@ -363,7 +363,7 @@ All businesses - search
           -->
 
           <div class="govuk-button-group govuk-!-margin-top-6">
-            <button type="search" class="govuk-button">
+            <button type="submit" class="govuk-button">
               Search
             </button>
 
