--- a/app/views/psd-revised-flow/case-status-2/new-businesses-example_team_businesses-new.html
+++ b/app/views/psd-revised-flow/case-status-2/new-businesses-example_team_businesses-new.html
@@ -88,7 +88,7 @@ Team businesses
     </div>
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full" role="region" aria-label="Businesses">
+      <div class="govuk-grid-column-full" aria-label="Businesses">
 
         <table class="govuk-table opss-table-items opss-table-items--first-col-33 opss-table-items--sm opss-table--borders">
           <caption class="govuk-table__caption govuk-visually-hidden">
