--- a/app/views/psd-revised-flow/case-status-2/new-cases-example_all_cases-new.html
+++ b/app/views/psd-revised-flow/case-status-2/new-cases-example_all_cases-new.html
@@ -84,7 +84,7 @@ All cases - Search
     </section>
 
     <!-- ********* search section starts ************ -->
-    <section id="page-content" class="govuk-grid-column-three-quarters" role="region" aria-label="Search and results">
+    <section id="page-content" class="govuk-grid-column-three-quarters" aria-label="Search and results">
 
         <form action="all_cases-new-results.html" role="search" accept-charset="UTF-8" novalidate>
 
@@ -527,7 +527,7 @@ All cases - Search
                     </div>
 
                     <div class="govuk-button-group govuk-!-margin-top-6">
-                        <button type="search" class="govuk-button">
+                        <button type="submit" class="govuk-button">
                             Search
                         </button>
 
