--- a/app/views/psd-revised-flow/case-status-2/new-products-example_all_products-new.html
+++ b/app/views/psd-revised-flow/case-status-2/new-products-example_all_products-new.html
@@ -72,7 +72,7 @@ All products - Search
   </section>
 
   <!-- ********* search section starts ************ -->
-  <section id="page-content" class="govuk-grid-column-three-quarters" role="region" aria-label="Search and results">
+  <section id="page-content" class="govuk-grid-column-three-quarters" aria-label="Search and results">
 
     <form action="all_products-new-results.html" role="search" accept-charset="UTF-8" novalidate>
 
@@ -285,7 +285,7 @@ All products - Search
           </div>
 
           <div class="govuk-button-group govuk-!-margin-top-6">
-            <button type="search" class="govuk-button">
+            <button type="submit" class="govuk-button">
               Search
             </button>
 
