--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -29,6 +29,11 @@
   hyphens: auto;
 }
 
+%hover-underline {
+  text-decoration-thickness: .15em !important;
+  text-decoration-thickness: .1875rem !important;
+}
+
 $std-font-family: "GDS Transport", "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
 
 form.opss-cookie-form {
@@ -106,9 +111,9 @@ h1.govuk-label-wrapper label.govuk-label--l {
 //   }
 // }
 
+.govuk-back-link:hover,
 .govuk-breadcrumbs__link:hover {
-  text-decoration-thickness: .15em !important;
-  text-decoration-thickness: .1875rem !important;
+  @extend %hover-underline;
 }
 
 main {
@@ -116,13 +121,11 @@ main {
   .govuk-details .govuk-details__summary-text:hover {
     text-decoration-skip-ink: none;
     text-decoration: underline !important;
-    text-decoration-thickness: .15em !important;
-    text-decoration-thickness: .1875rem !important;
+    @extend %hover-underline;
   }
 
   .opss-button-link:hover {
-    text-decoration-thickness: .15em !important;
-    text-decoration-thickness: .1875rem !important;
+    @extend %hover-underline;
   }
 
   a.govuk-link:active,
