removed text option for not conclusive

--- a/app/views/psd-revised-flow/not-set/add-a-risk-assessment.html
+++ b/app/views/psd-revised-flow/not-set/add-a-risk-assessment.html
@@ -115,7 +115,7 @@ href: "#"
                         </div>
 
 
-                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-risk_level-4">
+                        <!--div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-risk_level-4">
                             <div class="govuk-form-group">
                                 <label class="govuk-label govuk-visually-hidden" for="custom_risk_level">Other risk level</label>
 
@@ -124,7 +124,7 @@ href: "#"
                             </div>
 
 
-                        </div>
+                        </div-->
                     </div>
                 </fieldset>
             </div>
