add a corrective action form page

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -1176,6 +1176,10 @@ dl.opss-summary-list-aside {
       }
     }
   }
+
+  .opss-select--min-width-300 {
+    min-width: 300px;
+  }
 }
 
 // bespoke styles for Cases accordian section on a product page ... starts
