minor additions to corrective action form design

--- a/app/views/psd-revised-flow/corrective-action-hint/index.html
+++ b/app/views/psd-revised-flow/corrective-action-hint/index.html
@@ -340,7 +340,7 @@ href: "#"
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                         What is the geographic scope of the action?
                     </legend>
-                    <div class="govuk-hint" id="geo-hint">Select all that apply.</div>
+                    <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-bottom-4" id="geo-hint">Select all that apply.</div>
 
                     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
 
@@ -364,13 +364,13 @@ href: "#"
 
                         <div class="govuk-checkboxes__item">
                             <input id="geographic_scopes-3" name="corrective_action[geographic_scopes][]" type="checkbox" value="eea_wide" class="govuk-checkboxes__input">
-                            <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-3">EEA Wide</label>
+                            <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-3"><abbr>EEA</abbr> Wide</label>
 
                         </div>
 
                         <div class="govuk-checkboxes__item">
                             <input id="geographic_scopes-4" name="corrective_action[geographic_scopes][]" type="checkbox" value="eu_wide" class="govuk-checkboxes__input">
-                            <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-4">EU Wide</label>
+                            <label class="govuk-label govuk-checkboxes__label" for="geographic_scopes-4"><abbr>EU</abbr> Wide</label>
 
                         </div>
 
