--- a/app/views/psd-revised-flow/consignment-ref/customs-codes-01.html
+++ b/app/views/psd-revised-flow/consignment-ref/customs-codes-01.html
@@ -293,8 +293,9 @@ href: "cases"
             Case specific product information
         </h3>
 
-        <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">Asda washing up
-            liquid</h4>
+        <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">
+            Asda washing up liquid (psd-110)
+        </h4>
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
 
@@ -303,8 +304,7 @@ href: "cases"
                     Units affected
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    22000 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Exact
-                        number</span>
+                    22000 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Exact number</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -327,21 +327,36 @@ href: "cases"
                 </dd>
             </div>
 
-            <div class="govuk-summary-list__row">
+            <div class="govuk-summary-list__row opss-border-bottom-none">
                 <dt class="govuk-summary-list__key">
                     Customs codes
                 </dt>
 
                 <dd class="govuk-summary-list__value">
-                    <span class="govuk-!-font-size-16 opss-secondary-text">For example: <abbr title="Unique Consignment Reference">UCR</abbr>, <abbr title="Combined Nomenclature">CN</abbr>, <span title="Integrated Tariff of the European Communities">TARIC</span></span>
+                    <span class="govuk-!-font-size-16 opss-secondary-text">Various. For example: <abbr title="Combined Nomenclature">CN</abbr>, <span title="Integrated Tariff of the European Communities">TARIC</span><span class="govuk-visually-hidden">. Not <abbr>UCR</abbr> numbers</span></span>
                 </dd>
 
                 <dd class="govuk-summary-list__actions">
-                    <a href="edit-customs-codes" class="govuk-link govuk-link--no-visited-state">
+                    <a href="edit-general-customs-codes" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the customs codes for Asda washing up liquid</span>
                     </a>
                 </dd>
+            </div>
 
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    <span class="govuk-visually-hidden"><abbr>UCR</abbr> code</span>
+                </dt>
+
+                <dd class="govuk-summary-list__value">
+                    <span class="govuk-!-font-size-16 opss-secondary-text"><abbr title="Unique Consignment Reference">UCR</abbr> numbers</span>
+                </dd>
+
+                <dd class="govuk-summary-list__actions">
+                    <a href="edit-ucr-codes" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the <abbr>UCR</abbr> numbers for Asda washing up liquid</span>
+                    </a>
+                </dd>
             </div>
         </dl>
 
