--- a/app/views/psd-revised-flow/consignment-ref/customs-codes-01-success.html
+++ b/app/views/psd-revised-flow/consignment-ref/customs-codes-01-success.html
@@ -13,9 +13,29 @@ href: "#"
 
 {% block content %}
 
+
+<div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+
+    <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+            Success
+        </h2>
+    </div>
+
+    <div class="govuk-notification-banner__content">
+        <p class="govuk-notification-banner__heading">
+            The case information was updated
+        </p>
+    </div>
+
+</div>
+
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
-        <span class="govuk-caption-m">Allegation</span>
+
+        <span class="govuk-caption-m opss-visibility-hidden">The case page</span>
+
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Case {% include "psd-revised-flow/case-ref.html" %}
             <!--span class="govuk-heading-m govuk-!-font-weight-regular govuk-!-padding-left-1 opss-secondary-text">2101-0008</span-->
@@ -27,7 +47,7 @@ href: "#"
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="close-case.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Close case
             </a><!-- or, Re-open case -->
         </div>
@@ -53,20 +73,12 @@ href: "#"
             Skip to the main content
         </a>
 
-        {% include "psd-revised-flow/inc_left_nav_1_empty.html" %}
+        {% include "psd-revised-flow/inc_left_nav_1c.html" %}
     </nav>
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
-        <div class="govuk-warning-text govuk-!-display-inline-block">
-            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-            <strong class="govuk-warning-text__text">
-                <span class="govuk-warning-text__assistive">Warning</span>
-                A product has not been added to this case.
-            </strong>
-        </div>
-
-        {% include "psd-revised-flow/inc_top_nav_2_empty.html" %}
+        {% include "psd-revised-flow/inc_top_nav_2.html" %}
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
 
@@ -76,7 +88,7 @@ href: "#"
                     Case name
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Hoover 1000 cleaners overheating
+                    New feature - readable case name
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -84,10 +96,9 @@ href: "#"
                     </a>
                 </dd>
             </div>
-            <div class="govuk-summary-list__row">
+            <div class="govuk-summary-list__row govuk-summary-list__row--no-actions">
                 <dt class="govuk-summary-list__key">
-                    Allegation
-                    <!--span class="opss-numero" title="Number">&numero;</span-->
+                    Allegation <!--span class="opss-numero" title="Number">&numero;</span-->
                     <!-- or Enquiry / Project -->
                 </dt>
                 <dd class="govuk-summary-list__value">
@@ -98,15 +109,14 @@ href: "#"
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Reference
-                    <!--span class="opss-numero" title="Number">&numero;</span-->
+                    Reference <!--span class="opss-numero" title="Number">&numero;</span-->
                 </dt>
                 <dd class="govuk-summary-list__value">
                     12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading
                         standards reference</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="/psd-revised-flow/edit-reference-number" class="govuk-link govuk-link--no-visited-state">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the reference number</span>
                     </a>
                 </dd>
@@ -116,11 +126,16 @@ href: "#"
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-
-
+                    <span class="opss-text-limit-scroll-s">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam magnam, laboriosam voluptate
+                        aut, rem nobis porro ipsam sint iure, earum facere! Ad dolorem vero, voluptatum nulla debitis
+                        recusandae rerum eos? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+                        magnam, laboriosam voluptate aut, rem nobis porro ipsam sint iure, earum facere! Ad dolorem
+                        vero, voluptatum nulla debitis recusandae rerum eos?
+                    </span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
+                    <a href="# class=" govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the summary</span>
                     </a>
                 </dd>
@@ -140,12 +155,25 @@ href: "#"
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Last updated</dt>
-                <dd class="govuk-summary-list__value"></dd>
+                <dd class="govuk-summary-list__value">About 8 hours ago</dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Created</dt>
-                <dd class="govuk-summary-list__value">1 August 2022</dd>
+                <dd class="govuk-summary-list__value">13 December 2021</dd>
             </div>
+            <!--div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Notifying country
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Change<span class="govuk-visually-hidden"> the notifying country</span>
+                    </a>
+                </dd>               
+            </div-->
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Created by
@@ -172,9 +200,14 @@ href: "#"
                     Teams added
                 </dt>
                 <dd class="govuk-summary-list__value">
-
-                    Renfrewshire Council
-
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            South Yorkshire Trading Standards services
+                        </li>
+                        <li>
+                            Watford Council
+                        </li>
+                    </ul>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -201,11 +234,19 @@ href: "#"
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Case risk level</dt>
                 <dd class="govuk-summary-list__value">
+                    <span class="opss-tag opss-tag--risk1 opss-tag--lrg">
 
+                        Serious risk
+
+                    </span>
+
+                    <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                        <span class="govuk-visually-hidden"> - </span>Not validated
+                    </span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Set<span class="govuk-visually-hidden"> the risk level</span>
+                        Change<span class="govuk-visually-hidden"> the risk level</span>
                     </a>
                 </dd>
             </div>
@@ -213,7 +254,7 @@ href: "#"
                 <dt class="govuk-summary-list__key">Risk level validated</dt>
                 <dd class="govuk-summary-list__value">No</dd>
             </div-->
-            <!--div class="govuk-summary-list__row">
+            <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     COVID-19
                 </dt>
@@ -225,14 +266,14 @@ href: "#"
                         Change<span class="govuk-visually-hidden"> the coronavirus status</span>
                     </a>
                 </dd>
-            </div-->
+            </div>
         </dl>
 
         <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-6 opss-float-left">
             Safety and compliance
         </h3>
 
-        <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
+        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
         </a>
 
@@ -258,8 +299,10 @@ href: "#"
                     Hazard description
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto.
-                    Aut, maiores quisquam elit.
+                    <span class="govuk-!-font-size-16">
+                        Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel
+                        architecto. Aut, maiores quisquam elit.
+                    </span>
                 </dd>
             </div>
         </dl>
@@ -269,51 +312,74 @@ href: "#"
         </h3>
 
         <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">
-            <!--A product has not been added to this case-->
-            You can add this information after a product has been added to the case.
+            Asda washing up liquid (psd-110)
         </h4>
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Units affected
                 </dt>
                 <dd class="govuk-summary-list__value">
-
+                    22000 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Exact number</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <!--a href="edit-units-affected" class="govuk-link govuk-link--no-visited-state">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the units affected for Asda washing up liquid</span>
-                    </a-->
+                    </a>
                 </dd>
             </div>
+
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Batch numbers
                 </dt>
                 <dd class="govuk-summary-list__value">
-
+                    <span class="opss-no-wrap">B3736-33QY</span>, <span class="opss-no-wrap">D9887-31ZY</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <!--a href="edit-batch-numbers" class="govuk-link govuk-link--no-visited-state">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the batch numbers for Asda washing up liquid</span>
-                    </a-->
+                    </a>
                 </dd>
             </div>
-            <div class="govuk-summary-list__row">
+
+            <div class="govuk-summary-list__row opss-border-bottom-none">
                 <dt class="govuk-summary-list__key">
                     Customs codes
                 </dt>
-                <dd class="govuk-summary-list__value">
 
+                <dd class="govuk-summary-list__value">
+                    85258091 <span class="govuk-!-font-size-16 opss-secondary-text govuk-!-padding-left-2">Various</span>
                 </dd>
+
+                <!--dd class="govuk-summary-list__value">
+                    85258091 <span class="govuk-!-font-size-16 opss-secondary-text govuk-!-padding-left-2">Various. For example: <abbr title="Combined Nomenclature">CN</abbr>, <span title="Integrated Tariff of the European Communities">TARIC</span><span class="govuk-visually-hidden">. Not <abbr>UCR</abbr> numbers</span></span>
+                </dd-->
+
                 <dd class="govuk-summary-list__actions">
-                    <!--a href="edit-customs-codes" class="govuk-link govuk-link--no-visited-state">
+                    <a href="edit-general-customs-codes-2" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the customs codes for Asda washing up liquid</span>
-                    </a-->
+                    </a>
                 </dd>
             </div>
 
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    <span class="govuk-visually-hidden"><abbr>UCR</abbr> code</span>
+                </dt>
+
+                <dd class="govuk-summary-list__value">
+                    <span class="govuk-!-font-size-16 opss-secondary-text"><abbr title="Unique Consignment Reference">UCR</abbr> numbers</span>
+                </dd>
+
+                <dd class="govuk-summary-list__actions">
+                    <a href="edit-ucr-codes" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the <abbr>UCR</abbr> numbers for Asda washing up liquid</span>
+                    </a>
+                </dd>
+            </div>
         </dl>
 
     </section>
