update to customs codes page

--- a/app/views/psd-revised-flow/consignment-ref/customs-codes-01.html
+++ b/app/views/psd-revised-flow/consignment-ref/customs-codes-01.html
@@ -333,7 +333,7 @@ href: "cases"
                 </dt>
 
                 <dd class="govuk-summary-list__value">
-                    <span class="govuk-!-font-size-16 opss-secondary-text">Various. For example: <abbr title="Combined Nomenclature">CN</abbr>, <span title="Integrated Tariff of the European Communities">TARIC</span><span class="govuk-visually-hidden">. Not <abbr>UCR</abbr> numbers</span></span>
+                    <span class="govuk-!-font-size-16 opss-secondary-text">Various</span>
                 </dd>
 
                 <dd class="govuk-summary-list__actions">
