--- a/app/views/recall.html
+++ b/app/views/recall.html
@@ -40,7 +40,7 @@
 {# Set serviceName in config.js. #}
 {{ govukHeader({
 
-serviceName: "The Prepairing Product Recall Data tool",
+serviceName: "Formatting product recall information",
 
 containerClasses: "govuk-width-container"
 }) }}
