--- a/app/views/recall/select-image-pg.html
+++ b/app/views/recall/select-image-pg.html
@@ -14,11 +14,13 @@ Edit the Product Recalls and Alerts information
     <div class="govuk-grid-column-full">
 
         <h1 class="govuk-heading-l">
-            Prepare the product recall information
+            Select the image to include
         </h1>
 
         <p class="govuk-body-l opss-secondary-text">
-            Preparing and formatting <abbr title="Product Safety Database">PSD</abbr> data for the Product Recalls and Alerts digital service.
+            H1 should be legend as we're using radios below <br>
+
+
         </p>
 
         <p class="govuk-body-s opss-secondary-text">
@@ -34,7 +36,7 @@ Edit the Product Recalls and Alerts information
     <div class="govuk-grid-column-three-quarters">
 
         <p class="govuk-body">
-            This tool provides a convenient process for porting information from the <abbr>PSD</abbr> to the Product Recalls and Alerts digital service. You can add or edit information and transform it into the required Markdown format, ready to &lsquo;copy and paste&rsquo; directly into the recall service.
+            This tool provides a convenient process for porting information from the <abbr>PSD</abbr> to the Product Recalls and Alerts digital service. You can add or edit information and convert it into the required Markdown format, ready to &lsquo;copy and paste&rsquo; directly into the recall service.
         </p>
 
 
