--- a/app/views/recall/select-image-pg.html
+++ b/app/views/recall/select-image-pg.html
@@ -72,8 +72,8 @@ Edit the Product Recalls and Alerts information
         </dl>
 
         <div class="govuk-form-group">
-            <a href="select-image-pg.html" role="button" draggable="false" class="govuk-button govuk-button--start">
-                Start now
+            <a href="edit-content-pg.html" role="button" draggable="false" class="govuk-button govuk-button--start">
+                Continue
                 <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                     <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
                 </svg>
