--- a/app/views/recall/start-pg.html
+++ b/app/views/recall/start-pg.html
@@ -14,7 +14,7 @@ Edit the Product Recalls and Alerts information
     <div class="govuk-grid-column-full">
 
         <h1 class="govuk-heading-l">
-            Prepare the product recall information
+            Preparing product recall information
         </h1>
 
         <p class="govuk-body-l opss-secondary-text">
